welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: too many arguments for method gauche: ()Unit
gauche(2)
      ^Balin:10: error: too many arguments for method droite: ()Unit
	droite(2)
              ^Balin:14: error: too many arguments for method poseBiscuit: ()Unit
poseBiscuit(1)
           ^Balin:17: error: too many arguments for method gauche: ()Unit
gauche(1)
      ^Balin:19: error: too many arguments for method gauche: ()Unit
gauche(1)
      ^