welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (estFaceMur()){
while (estSurBiscuit()==false) {
	avance()

}
prendBiscuit()
gauche(2)
while (estSurBiscuit()==false) {
	avance()
	droite(2)

}
recule(1)
poseBiscuit(1)

}
gauche(1)
avance(1)
gauche(1)
avance(1)

